/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

group = 'org.cobra'
version = 'consumer.1.0'
description = 'cobra'

allprojects {
    apply {
        plugin 'java-library'
        plugin 'java'
    }

    java.sourceCompatibility = JavaVersion.VERSION_21

    repositories {
        mavenLocal()
        maven {
            url = uri('https://repo.maven.apache.org/maven2/')
        }
    }

    dependencies {
        implementation libs.org.slf4j.slf4j.api
        implementation libs.org.jetbrains.annotations

        testImplementation libs.org.junit.jupiter.junit.jupiter.engine
        testImplementation libs.org.junit.platform.junit.platform.runner
        testImplementation libs.org.mockito.mockito.core
        testRuntimeOnly libs.org.junit.platform.junit.platform.launcher

        compileOnly libs.org.lombok
        annotationProcessor libs.org.lombok
    }

    test {
        maxParallelForks = 3
        useJUnitPlatform()
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    jar {
        duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.compilerArgs += "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
    }

    tasks.withType(Test).configureEach {
        jvmArgs += "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
    }

    tasks.withType(JavaExec).configureEach {
        jvmArgs += "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
    }

    tasks.withType(Javadoc).configureEach {
        options.encoding = 'UTF-8'
    }
}
